完善版权信息；

--- a/MJ1001/MainWindow.xaml
+++ b/MJ1001/MainWindow.xaml
@@ -1,4 +1,18 @@
-﻿<tsd:PluginWindowBase x:Class="Muggle.TeklaPlugins.MJ1001.MainWindow"
+﻿<!--==============================================================================
+ *  Muggle Tekla-Plugins - tools and plugins for Tekla Structures
+ *
+ *  Copyright © 2025 Huang YongXing.
+ *
+ *  This library is free software, licensed under the terms of the GNU
+ *  General Public License as published by the Free Software Foundation,
+ *  either version 3 of the License, or (at your option) any later version.
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program. If not, see<http://www.gnu.org/licenses/> .
+ *==============================================================================
+ *  MainWindow.xaml: user interface for the plugin MJ1001
+ *  written by Huang YongXing - thinkerhua@hotmail.com
+ *==============================================================================-->
+<tsd:PluginWindowBase x:Class="Muggle.TeklaPlugins.MJ1001.MainWindow"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:UIControls="clr-namespace:Tekla.Structures.Dialog.UIControls;assembly=Tekla.Structures.Dialog"
@@ -7,10 +21,10 @@
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:tsd="clr-namespace:Tekla.Structures.Dialog;assembly=Tekla.Structures.Dialog"
                       Title="{tsd:Loc albl_title}"
-                      d:Width="800"
                       ResizeMode="NoResize"
                       SizeToContent="WidthAndHeight"
-                      mc:Ignorable="d">
+                      mc:Ignorable="d"
+                      d:Width="800">
 	<d:UserControl.DataContext>
 		<local:MainWindowViewModel />
 	</d:UserControl.DataContext>
@@ -56,10 +70,9 @@
 
 	<DockPanel Margin="6,0">
 		<UIControls:WpfSaveLoad DockPanel.Dock="Top" HelpOpenClicked="WpfSaveLoad_HelpOpenClicked" />
-		<UIControls:WpfOkApplyModifyGetOnOffCancel DockPanel.Dock="Bottom"
-		                                           ApplyClicked="WPFOkApplyModifyGetOnOffCancel_ApplyClicked"
+		<UIControls:WpfOkApplyModifyGetOnOffCancel ApplyClicked="WPFOkApplyModifyGetOnOffCancel_ApplyClicked"
 		                                           CancelClicked="WPFOkApplyModifyGetOnOffCancel_CancelClicked"
-		                                           GetClicked="WPFOkApplyModifyGetOnOffCancel_GetClicked"
+		                                           DockPanel.Dock="Bottom" GetClicked="WPFOkApplyModifyGetOnOffCancel_GetClicked"
 		                                           ModifyClicked="WPFOkApplyModifyGetOnOffCancel_ModifyClicked"
 		                                           OkClicked="WPFOkApplyModifyGetOnOffCancel_OkClicked"
 		                                           OnOffClicked="WPFOkApplyModifyGetOnOffCancel_OnOffClicked" />
@@ -138,11 +151,11 @@
 
 			<TextBlock Grid.Row="5" Grid.Column="0" Text="{tsd:Loc albl_embedment_MATL}" />
 			<UIControls:WpfFilterCheckBox Grid.Row="5" Grid.Column="2" AttributeName="embedment_MATL" />
-			<TextBox x:Name="tboxEmbedmentMaterial" Grid.Row="5" Grid.Column="3" Text="{Binding EmbedmentMaterial, Mode=TwoWay}" />
+			<TextBox x:Name="tboxEmbedmentMaterial"
+			         Grid.Row="5" Grid.Column="3"
+			         Text="{Binding EmbedmentMaterial, Mode=TwoWay}" />
 			<UIControls:WpfMaterialCatalog x:Name="catalogEmbedmentMaterial"
-			                               Grid.Row="5"
-			                               Grid.Column="4"
-			                               SelectClicked="EmbedmentMaterial_SelectClicked"
+			                               Grid.Row="5" Grid.Column="4" SelectClicked="EmbedmentMaterial_SelectClicked"
 			                               SelectionDone="EmbedmentMaterial_SelectionDone" />
 
 			<TextBlock Grid.Row="6" Grid.Column="0" Text="{tsd:Loc albl_anchorRod_LEN}" />
@@ -156,11 +169,11 @@
 
 			<TextBlock Grid.Row="8" Grid.Column="0" Text="{tsd:Loc albl_anchorRod_MATL}" />
 			<UIControls:WpfFilterCheckBox Grid.Row="8" Grid.Column="2" AttributeName="anchorRod_MATL" />
-			<TextBox x:Name="anchorRodMaterial" Grid.Row="8" Grid.Column="3" Text="{Binding AnchorRodMaterial}" />
+			<TextBox x:Name="anchorRodMaterial"
+			         Grid.Row="8" Grid.Column="3"
+			         Text="{Binding AnchorRodMaterial}" />
 			<UIControls:WpfMaterialCatalog x:Name="catalogAnchorRodMaterial"
-			                               Grid.Row="8"
-			                               Grid.Column="4"
-			                               SelectClicked="AnchorRodMaterial_SelectClicked"
+			                               Grid.Row="8" Grid.Column="4" SelectClicked="AnchorRodMaterial_SelectClicked"
 			                               SelectionDone="AnchorRodMaterial_SelectionDone" />
 
 			<TextBlock Grid.Row="9" Grid.Column="0" Text="{tsd:Loc albl_anchorRod_disList_X}" />
@@ -188,20 +201,24 @@
 
 			<TextBlock Grid.Row="14" Grid.Column="0" Text="{tsd:Loc albl_cleat_MATL}" />
 			<UIControls:WpfFilterCheckBox Grid.Row="14" Grid.Column="2" AttributeName="cleat_MATL" />
-			<TextBox x:Name="tboxCleatMaterial" Grid.Row="14" Grid.Column="3" Text="{Binding CleatMaterial, Mode=TwoWay}" />
+			<TextBox x:Name="tboxCleatMaterial"
+			         Grid.Row="14" Grid.Column="3"
+			         Text="{Binding CleatMaterial, Mode=TwoWay}" />
 			<UIControls:WpfMaterialCatalog x:Name="catalogCleatMaterial"
-			                               Grid.Row="14"
-			                               Grid.Column="4"
-			                               SelectClicked="CleatMaterial_SelectClicked"
+			                               Grid.Row="14" Grid.Column="4" SelectClicked="CleatMaterial_SelectClicked"
 			                               SelectionDone="CleatMaterial_SelectionDone" />
 
 			<TextBlock Grid.Row="15" Grid.Column="0" Text="{tsd:Loc albl_bolt_STD}" />
 			<UIControls:WpfFilterCheckBox Grid.Row="15" Grid.Column="2" AttributeName="bolt_STD" />
-			<UIControls:WpfBoltCatalogStandard x:Name="boltStandard" Grid.Row="15" Grid.Column="3" SelectedItem="{Binding BoltStandard}" />
+			<UIControls:WpfBoltCatalogStandard x:Name="boltStandard"
+			                                   Grid.Row="15" Grid.Column="3"
+			                                   SelectedItem="{Binding BoltStandard}" />
 
 			<TextBlock Grid.Row="16" Grid.Column="0" Text="{tsd:Loc albl_bolt_size}" />
 			<UIControls:WpfFilterCheckBox Grid.Row="16" Grid.Column="2" AttributeName="bolt_size" />
-			<UIControls:WpfBoltCatalogSize Grid.Row="16" Grid.Column="3" SelectedItem="{Binding BoltSize}" ItemsSource="{Binding ElementName=boltStandard, Path=BoltSizes}" />
+			<UIControls:WpfBoltCatalogSize Grid.Row="16" Grid.Column="3"
+			                               ItemsSource="{Binding ElementName=boltStandard, Path=BoltSizes}"
+			                               SelectedItem="{Binding BoltSize}" />
 
 			<TextBlock Grid.Row="17" Grid.Column="0" Text="{tsd:Loc albl_bolt_disList_X}" />
 			<TextBlock Grid.Row="17" Grid.Column="1" Text="h" />
