--- a/MJ5001/Resources/BackgroundImage.xaml
+++ b/MJ5001/Resources/BackgroundImage.xaml
@@ -9,7 +9,7 @@
  *  You should have received a copy of the GNU General Public License
  *  along with this program. If not, see<http://www.gnu.org/licenses/> .
  *==============================================================================
- *  BackgroundImage.xaml: background image of main window
+ *  BackgroundImage.xaml: background image of main window for MJ5001
  *  written by Huang YongXing - thinkerhua@hotmail.com
  *==============================================================================-->
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
