--- a/MJ5001/MainWindow.xaml
+++ b/MJ5001/MainWindow.xaml
@@ -20,11 +20,11 @@
                       xmlns:local="clr-namespace:Muggle.TeklaPlugins.MJ5001"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:tsd="clr-namespace:Tekla.Structures.Dialog;assembly=Tekla.Structures.Dialog"
-                      Title="{tsd:Loc albl_title}"
-                      d:Width="800"
+                      Title="{tsd:Loc albl_MJ5001_title}"
                       ResizeMode="NoResize"
                       SizeToContent="WidthAndHeight"
-                      mc:Ignorable="d">
+                      mc:Ignorable="d"
+                      d:Width="800">
 	<d:UserControl.DataContext>
 		<local:MainWindowViewModel />
 	</d:UserControl.DataContext>
