--- a/KJ1001/Views/MainWindow.xaml
+++ b/KJ1001/Views/MainWindow.xaml
@@ -1,4 +1,18 @@
-﻿<tsd:PluginWindowBase x:Class="Muggle.TeklaPlugins.KJ1001.MainWindow"
+﻿<!--==============================================================================
+ *  Muggle Tekla-Plugins - tools and plugins for Tekla Structures
+ *
+ *  Copyright © 2025 Huang YongXing.
+ *
+ *  This library is free software, licensed under the terms of the GNU
+ *  General Public License as published by the Free Software Foundation,
+ *  either version 3 of the License, or (at your option) any later version.
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program. If not, see<http://www.gnu.org/licenses/> .
+ *==============================================================================
+ *  MainWindow.xaml: user interface for the plugin KJ1001
+ *  written by Huang YongXing - thinkerhua@hotmail.com
+ *==============================================================================-->
+<tsd:PluginWindowBase x:Class="Muggle.TeklaPlugins.KJ1001.MainWindow"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:UIControls="clr-namespace:Tekla.Structures.Dialog.UIControls;assembly=Tekla.Structures.Dialog"
