--- a/MainWindow/App.xaml
+++ b/MainWindow/App.xaml
@@ -1,14 +1,16 @@
-﻿<Application x:Class="Muggle.TeklaPlugins.MainWindow.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Muggle.TeklaPlugins.MainWindow"
-             xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
-             xmlns:views="clr-namespace:Muggle.TeklaPlugins.MainWindow.Views"
-             xmlns:cvt="clr-namespace:Muggle.TeklaPlugins.MainWindow.Converters"
-             Startup="Application_Startup">
+﻿<Application
+	x:Class="Muggle.TeklaPlugins.MainWindow.App"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:cvt="clr-namespace:Muggle.TeklaPlugins.MainWindow.Converters"
+	xmlns:local="clr-namespace:Muggle.TeklaPlugins.MainWindow"
+	xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
+	xmlns:views="clr-namespace:Muggle.TeklaPlugins.MainWindow.Views"
+	Startup="Application_Startup">
 	<Application.Resources>
 		<cvt:EnumToBoolValueConverter x:Key="enumToBool" />
 		<cvt:MultiplesValueConverter x:Key="multiples" />
 		<cvt:PluginNameToIconValueConverter x:Key="pluginNameToIcon" />
+		<cvt:RoundDownValueConverter x:Key="roundDown" />
 	</Application.Resources>
 </Application>
