--- a/MainWindow/Views/MainWindow.xaml
+++ b/MainWindow/Views/MainWindow.xaml
@@ -31,15 +31,10 @@
 
 	<Window.Resources>
 		<ResourceDictionary>
-			<Style x:Key="element" TargetType="FrameworkElement">
-				<Setter Property="Margin" Value="2" />
-			</Style>
-			<Style TargetType="Button" BasedOn="{StaticResource element}">
+			<Style TargetType="Expander" BasedOn="{StaticResource ExpanderStyle1}" />
+			<Style TargetType="RadioButton" BasedOn="{StaticResource MenuButtonStyle1}">
 				<Setter Property="Height" Value="30" />
-			</Style>
-			<Style TargetType="Expander" BasedOn="{StaticResource element}">
-				<Setter Property="BorderBrush" Value="LightGray" />
-				<Setter Property="Padding" Value="2" />
+				<Setter Property="Margin" Value="0,2,0,0" />
 			</Style>
 		</ResourceDictionary>
 	</Window.Resources>
@@ -53,30 +48,30 @@
 
 		<ScrollViewer Grid.Column="0" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Hidden">
 			<StackPanel>
-				<Expander Header="Tools" IsExpanded="True">
+				<Expander Header="Modeling Tools" IsExpanded="True">
 					<StackPanel>
-						<Button Content="Normal" Command="{Binding NavigateCommand}">
-							<Button.CommandParameter>
+						<RadioButton Content="Normal" GroupName="menuBtn" Command="{Binding NavigateCommand}">
+							<RadioButton.CommandParameter>
 								<local:NormalTools />
-							</Button.CommandParameter>
-						</Button>
-						<Button Content="SelectBooleans" Command="{Binding NavigateCommand}">
-							<Button.CommandParameter>
+							</RadioButton.CommandParameter>
+						</RadioButton>
+						<RadioButton Content="SelectBooleans" GroupName="menuBtn" Command="{Binding NavigateCommand}">
+							<RadioButton.CommandParameter>
 								<local:SelectBooleans />
-							</Button.CommandParameter>
-						</Button>
-						<Button Content="ThreeDimensionalRotation" Command="{Binding NavigateCommand}">
-							<Button.CommandParameter>
+							</RadioButton.CommandParameter>
+						</RadioButton>
+						<RadioButton Content="ThreeDimensionalRotation" GroupName="menuBtn" Command="{Binding NavigateCommand}">
+							<RadioButton.CommandParameter>
 								<local:ThreeDimensionalRotation />
-							</Button.CommandParameter>
-						</Button>
+							</RadioButton.CommandParameter>
+						</RadioButton>
 					</StackPanel>
 				</Expander>
-				<Button Content="Plugins" Command="{Binding NavigateCommand}">
-					<Button.CommandParameter>
+				<RadioButton Content="Plugins" GroupName="menuBtn" Command="{Binding NavigateCommand}">
+					<RadioButton.CommandParameter>
 						<local:Plugins />
-					</Button.CommandParameter>
-				</Button>
+					</RadioButton.CommandParameter>
+				</RadioButton>
 			</StackPanel>
 		</ScrollViewer>
 
