--- a/MainWindow/Views/SelectBooleans.xaml
+++ b/MainWindow/Views/SelectBooleans.xaml
@@ -34,6 +34,7 @@
 				<Setter Property="VerticalContentAlignment" Value="Center" />
 			</Style>
 			<Style TargetType="Button">
+				<Setter Property="Template" Value="{StaticResource ButtonStyle1}" />
 				<Setter Property="Margin" Value="2" />
 				<Setter Property="Height" Value="30" />
 			</Style>
