--- a/MainWindow/Views/NormalTools.xaml
+++ b/MainWindow/Views/NormalTools.xaml
@@ -29,13 +29,14 @@
 	<Page.Resources>
 		<ResourceDictionary>
 			<Style TargetType="Button">
-				<Setter Property="Margin" Value="2" />
+				<Setter Property="Template" Value="{StaticResource ButtonStyle1}" />
+				<Setter Property="Margin" Value="{StaticResource UniformMargin}" />
 				<Setter Property="Height" Value="30" />
 			</Style>
 		</ResourceDictionary>
 	</Page.Resources>
 
-	<StackPanel Width="160" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top">
+	<StackPanel Margin="0" HorizontalAlignment="Left" VerticalAlignment="Top">
 		<Button Content="ShowModelObjectCoordinateSystem" Command="{Binding ShowModelObjectCoordinateSystemCommand}" />
 		<Button Content="SelectWeldedObjects" Command="{Binding SelectWeldedObjectsCommand}" />
 		<Button Content="ReorderContourPoints" Command="{Binding ReorderContourPointsCommand}" />
