--- a/KJ1002/Views/MainWindow.xaml
+++ b/KJ1002/Views/MainWindow.xaml
@@ -15,13 +15,13 @@
 <tsd:PluginWindowBase x:Class="Muggle.TeklaPlugins.KJ1002.Views.MainWindow"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      xmlns:uiCtls="clr-namespace:Tekla.Structures.Dialog.UIControls;assembly=Tekla.Structures.Dialog"
+                      xmlns:uiCtrls="clr-namespace:Tekla.Structures.Dialog.UIControls;assembly=Tekla.Structures.Dialog"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:local="clr-namespace:Muggle.TeklaPlugins.KJ1002"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:tsd="clr-namespace:Tekla.Structures.Dialog;assembly=Tekla.Structures.Dialog"
                       xmlns:vm="clr-namespace:Muggle.TeklaPlugins.KJ1002.ViewModels"
-                      xmlns:cvt="clr-namespace:Muggle.TeklaPlugins.KJ1002.ValueConverters"
+                      xmlns:cvc="clr-namespace:Muggle.TeklaPlugins.Common.WPF.ValueConverters;assembly=Common.WPF"
                       Title="{tsd:Loc albl_KJ1002_title}"
                       d:DataContext="{d:DesignInstance Type=vm:MainWindowViewModel}"
                       SizeToContent="WidthAndHeight"
@@ -37,7 +37,9 @@
 			<ResourceDictionary.MergedDictionaries>
 				<ResourceDictionary Source="/KJ1002;component/Resources/backgroundImage.xaml" />
 			</ResourceDictionary.MergedDictionaries>
-			<cvt:UpDirectionToSelectedIndexEnumValueConverter x:Key="upDirectionToSelectedIndex" />
+
+			<cvc:UpDirectionToSelectedIndexValueConverter x:Key="upDirectionToSelectedIndex" />
+
 			<Style x:Key="frameworkElement" TargetType="FrameworkElement">
 				<Setter Property="Margin" Value="3" />
 			</Style>
@@ -54,20 +56,20 @@
 			<Style TargetType="CheckBox">
 				<Setter Property="VerticalAlignment" Value="Center" />
 			</Style>
-			<Style TargetType="uiCtls:WpfFilterCheckBox">
+			<Style TargetType="uiCtrls:WpfFilterCheckBox">
 				<Setter Property="HorizontalAlignment" Value="Center" />
 				<Setter Property="VerticalAlignment" Value="Center" />
 			</Style>
-			<Style TargetType="uiCtls:WpfBoltCatalogStandard">
+			<Style TargetType="uiCtrls:WpfBoltCatalogStandard">
 				<Setter Property="Height" Value="24" />
 			</Style>
-			<Style TargetType="uiCtls:WpfBoltCatalogSize">
+			<Style TargetType="uiCtrls:WpfBoltCatalogSize">
 				<Setter Property="Height" Value="24" />
 			</Style>
-			<Style TargetType="uiCtls:WpfProfileCatalog">
+			<Style TargetType="uiCtrls:WpfProfileCatalog">
 				<Setter Property="VerticalAlignment" Value="Center" />
 			</Style>
-			<Style TargetType="uiCtls:WpfMaterialCatalog">
+			<Style TargetType="uiCtrls:WpfMaterialCatalog">
 				<Setter Property="VerticalAlignment" Value="Center" />
 			</Style>
 		</ResourceDictionary>
@@ -75,15 +77,15 @@
 
 	<DockPanel>
 
-		<uiCtls:WpfSaveLoad DockPanel.Dock="Top" />
+		<uiCtrls:WpfSaveLoad DockPanel.Dock="Top" />
 
-		<uiCtls:WpfOkApplyModifyGetOnOffCancel DockPanel.Dock="Bottom"
-		                                       ApplyClicked="WPFOkApplyModifyGetOnOffCancel_ApplyClicked"
-		                                       CancelClicked="WPFOkApplyModifyGetOnOffCancel_CancelClicked"
-		                                       GetClicked="WPFOkApplyModifyGetOnOffCancel_GetClicked"
-		                                       ModifyClicked="WPFOkApplyModifyGetOnOffCancel_ModifyClicked"
-		                                       OkClicked="WPFOkApplyModifyGetOnOffCancel_OkClicked"
-		                                       OnOffClicked="WPFOkApplyModifyGetOnOffCancel_OnOffClicked" />
+		<uiCtrls:WpfOkApplyModifyGetOnOffCancel DockPanel.Dock="Bottom"
+		                                        ApplyClicked="WPFOkApplyModifyGetOnOffCancel_ApplyClicked"
+		                                        CancelClicked="WPFOkApplyModifyGetOnOffCancel_CancelClicked"
+		                                        GetClicked="WPFOkApplyModifyGetOnOffCancel_GetClicked"
+		                                        ModifyClicked="WPFOkApplyModifyGetOnOffCancel_ModifyClicked"
+		                                        OkClicked="WPFOkApplyModifyGetOnOffCancel_OkClicked"
+		                                        OnOffClicked="WPFOkApplyModifyGetOnOffCancel_OnOffClicked" />
 
 
 		<TabControl>
@@ -136,57 +138,57 @@
 						</Grid.RowDefinitions>
 
 						<TextBlock Grid.Row="0" Grid.Column="0" Text="{tsd:Loc albl_section_length}" />
-						<uiCtls:WpfFilterCheckBox Grid.Row="0" Grid.Column="1" AttributeName="sectionLEN" />
+						<uiCtrls:WpfFilterCheckBox Grid.Row="0" Grid.Column="1" AttributeName="sectionLEN" />
 						<TextBlock Grid.Row="0" Grid.Column="2" HorizontalAlignment="Center" Text="L" />
 						<TextBox Grid.Row="0" Grid.Column="3" Text="{Binding SectionLength, Mode=TwoWay}" ToolTip="{tsd:Loc albl_section_length_tooltip}" />
 
 						<TextBlock Grid.Row="1" Grid.Column="0" Text="{tsd:Loc albl_brace_profile}" />
-						<uiCtls:WpfFilterCheckBox Grid.Row="1" Grid.Column="1" AttributeName="bracePRF" />
+						<uiCtrls:WpfFilterCheckBox Grid.Row="1" Grid.Column="1" AttributeName="bracePRF" />
 						<TextBlock Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" Text="P" />
 						<TextBox Grid.Row="1" Grid.Column="3" Text="{Binding BraceProfile, Mode=TwoWay}" />
-						<uiCtls:WpfProfileCatalog Grid.Row="1" Grid.Column="4" SelectClicked="WpfProfileCatalog_SelectClicked" SelectionDone="WpfProfileCatalog_SelectionDone" />
+						<uiCtrls:WpfProfileCatalog Grid.Row="1" Grid.Column="4" SelectClicked="WpfProfileCatalog_SelectClicked" SelectionDone="WpfProfileCatalog_SelectionDone" />
 
 						<TextBlock Grid.Row="2" Grid.Column="0" Text="{tsd:Loc albl_stiffener_thickness}" />
-						<uiCtls:WpfFilterCheckBox Grid.Row="2" Grid.Column="1" AttributeName="STIF_THK" />
+						<uiCtrls:WpfFilterCheckBox Grid.Row="2" Grid.Column="1" AttributeName="STIF_THK" />
 						<TextBlock Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" Text="t1" />
 						<TextBox Grid.Row="2" Grid.Column="3" Text="{Binding StiffenerThickness, Mode=TwoWay}" />
 
 						<TextBlock Grid.Row="3" Grid.Column="0" Text="{tsd:Loc albl_gusset_thickness}" />
-						<uiCtls:WpfFilterCheckBox Grid.Row="3" Grid.Column="1" AttributeName="gussetTHK" />
+						<uiCtrls:WpfFilterCheckBox Grid.Row="3" Grid.Column="1" AttributeName="gussetTHK" />
 						<TextBlock Grid.Row="3" Grid.Column="2" HorizontalAlignment="Center" Text="t2" />
 						<TextBox Grid.Row="3" Grid.Column="3" Text="{Binding GussetThickness, Mode=TwoWay}" />
 
 						<TextBlock Grid.Row="4" Grid.Column="0" Text="{tsd:Loc albl_clearance}" />
-						<uiCtls:WpfFilterCheckBox Grid.Row="4" Grid.Column="1" AttributeName="clearance" />
+						<uiCtrls:WpfFilterCheckBox Grid.Row="4" Grid.Column="1" AttributeName="clearance" />
 						<TextBlock Grid.Row="4" Grid.Column="2" HorizontalAlignment="Center" Text="C" />
 						<TextBox Grid.Row="4" Grid.Column="3" Text="{Binding Clearance, Mode=TwoWay}" />
 
 						<TextBlock Grid.Row="5" Grid.Column="0" Text="{tsd:Loc albl_extended_distance}" />
-						<uiCtls:WpfFilterCheckBox Grid.Row="5" Grid.Column="1" AttributeName="EXTD_Distance" />
+						<uiCtrls:WpfFilterCheckBox Grid.Row="5" Grid.Column="1" AttributeName="EXTD_Distance" />
 						<TextBlock Grid.Row="5" Grid.Column="2" HorizontalAlignment="Center" Text="E" />
 						<TextBox Grid.Row="5" Grid.Column="3" Text="{Binding ExtendedDistance, Mode=TwoWay}" />
 
 						<TextBlock Grid.Row="6" Grid.Column="0" Text="{tsd:Loc albl_bolt_standard}" />
-						<uiCtls:WpfFilterCheckBox Grid.Row="6" Grid.Column="1" AttributeName="boltStd" />
-						<uiCtls:WpfBoltCatalogStandard x:Name="catalogBoltStd" Grid.Row="6" Grid.Column="3" SelectedItem="{Binding BoltStandard, Mode=TwoWay}" />
+						<uiCtrls:WpfFilterCheckBox Grid.Row="6" Grid.Column="1" AttributeName="boltStd" />
+						<uiCtrls:WpfBoltCatalogStandard x:Name="catalogBoltStd" Grid.Row="6" Grid.Column="3" SelectedItem="{Binding BoltStandard, Mode=TwoWay}" />
 
 						<TextBlock Grid.Row="7" Grid.Column="0" Text="{tsd:Loc albl_bolt_size}" />
-						<uiCtls:WpfFilterCheckBox Grid.Row="7" Grid.Column="1" AttributeName="boltSize" />
-						<uiCtls:WpfBoltCatalogSize Grid.Row="7" Grid.Column="3" SelectedItem="{Binding BoltSize, Mode=TwoWay}" ItemsSource="{Binding ElementName=catalogBoltStd, Path=BoltSizes}" />
+						<uiCtrls:WpfFilterCheckBox Grid.Row="7" Grid.Column="1" AttributeName="boltSize" />
+						<uiCtrls:WpfBoltCatalogSize Grid.Row="7" Grid.Column="3" SelectedItem="{Binding BoltSize, Mode=TwoWay}" ItemsSource="{Binding ElementName=catalogBoltStd, Path=BoltSizes}" />
 
 						<TextBlock Grid.Row="8" Grid.Column="0" Text="{tsd:Loc albl_bolt_positions}" />
-						<uiCtls:WpfFilterCheckBox Grid.Row="8" Grid.Column="1" AttributeName="bolt_Positions" />
+						<uiCtrls:WpfFilterCheckBox Grid.Row="8" Grid.Column="1" AttributeName="bolt_Positions" />
 						<TextBlock Grid.Row="8" Grid.Column="2" HorizontalAlignment="Center" Text="P" />
 						<TextBox Grid.Row="8" Grid.Column="3" Text="{Binding BoltPositions, Mode=TwoWay}" />
 
 						<TextBlock Grid.Row="9" Grid.Column="0" Text="{tsd:Loc albl_creat_upper_splices}" />
-						<uiCtls:WpfFilterCheckBox Grid.Row="9" Grid.Column="1" AttributeName="creatUpperSplices" />
+						<uiCtrls:WpfFilterCheckBox Grid.Row="9" Grid.Column="1" AttributeName="creatUpperSplices" />
 						<CheckBox Grid.Row="9" Grid.Column="3" IsChecked="{Binding CreatUpperSplices, Mode=TwoWay}" />
 
 						<TextBlock Grid.Row="10" Grid.Column="0" Text="{tsd:Loc albl_material}" />
-						<uiCtls:WpfFilterCheckBox Grid.Row="10" Grid.Column="1" AttributeName="material" />
+						<uiCtrls:WpfFilterCheckBox Grid.Row="10" Grid.Column="1" AttributeName="material" />
 						<TextBox Grid.Row="10" Grid.Column="3" Text="{Binding Material, Mode=TwoWay}" />
-						<uiCtls:WpfMaterialCatalog Grid.Row="10" Grid.Column="4" SelectClicked="WpfMaterialCatalog_SelectClicked" SelectionDone="WpfMaterialCatalog_SelectionDone" />
+						<uiCtrls:WpfMaterialCatalog Grid.Row="10" Grid.Column="4" SelectClicked="WpfMaterialCatalog_SelectClicked" SelectionDone="WpfMaterialCatalog_SelectionDone" />
 					</Grid>
 				</DockPanel>
 			</TabItem>
@@ -210,7 +212,7 @@
 					</Grid.RowDefinitions>
 
 					<TextBlock Grid.Row="0" Grid.Column="0" Text="{tsd:Loc albl_up_direction}" />
-					<uiCtls:WpfFilterCheckBox Grid.Row="0" Grid.Column="1" AttributeName="zsuunta" />
+					<uiCtrls:WpfFilterCheckBox Grid.Row="0" Grid.Column="1" AttributeName="zsuunta" />
 					<ComboBox Grid.Row="0" Grid.Column="2" SelectedIndex="{Binding UpDirection, Mode=TwoWay, Converter={StaticResource upDirectionToSelectedIndex}}">
 						<ComboBoxItem Content="{tsd:Loc albl_auto}" />
 						<ComboBoxItem Content="+y" />
@@ -227,32 +229,32 @@
 					       Height="80"
 					       HorizontalAlignment="Right"
 					       Source="/KJ1002;component/Resources/Up direction.png" />
-					<uiCtls:WpfFilterCheckBox Grid.Row="1" Grid.Column="1" AttributeName="zang1" />
+					<uiCtrls:WpfFilterCheckBox Grid.Row="1" Grid.Column="1" AttributeName="zang1" />
 					<TextBox Grid.Row="1" Grid.Column="2" Text="{Binding RotationAngleY, Mode=TwoWay}" />
-					<uiCtls:WpfFilterCheckBox Grid.Row="2" Grid.Column="1" AttributeName="zang2" />
+					<uiCtrls:WpfFilterCheckBox Grid.Row="2" Grid.Column="1" AttributeName="zang2" />
 					<TextBox Grid.Row="2" Grid.Column="2" Text="{Binding RotationAngleX, Mode=TwoWay}" />
 
 					<TextBlock Grid.Row="4" Grid.Column="0" Text="{tsd:Loc albl_locked}" />
-					<uiCtls:WpfFilterCheckBox Grid.Row="4" Grid.Column="1" AttributeName="OBJECT_LOCKED" />
+					<uiCtrls:WpfFilterCheckBox Grid.Row="4" Grid.Column="1" AttributeName="OBJECT_LOCKED" />
 					<ComboBox Grid.Row="4" Grid.Column="2" SelectedIndex="{Binding Locked, Mode=TwoWay}">
 						<ComboBoxItem Content="{tsd:Loc albl_no}" />
 						<ComboBoxItem Content="{tsd:Loc albl_yes}" />
 					</ComboBox>
 
 					<TextBlock Grid.Row="5" Grid.Column="0" Text="{tsd:Loc albl_class}" />
-					<uiCtls:WpfFilterCheckBox Grid.Row="5" Grid.Column="1" AttributeName="group_no" />
+					<uiCtrls:WpfFilterCheckBox Grid.Row="5" Grid.Column="1" AttributeName="group_no" />
 					<TextBox Grid.Row="5" Grid.Column="2" Text="{Binding Class, Mode=TwoWay}" />
 
 					<TextBlock Grid.Row="6" Grid.Column="0" Text="{tsd:Loc albl_connection_code}" />
-					<uiCtls:WpfFilterCheckBox Grid.Row="6" Grid.Column="1" AttributeName="joint_code" />
+					<uiCtrls:WpfFilterCheckBox Grid.Row="6" Grid.Column="1" AttributeName="joint_code" />
 					<TextBox Grid.Row="6" Grid.Column="2" Text="{Binding ConnectionCode, Mode=TwoWay}" />
 
 					<TextBlock Grid.Row="7" Grid.Column="0" Text="{tsd:Loc albl_auto_defaults_rule_group}" />
-					<uiCtls:WpfFilterCheckBox Grid.Row="7" Grid.Column="1" AttributeName="ad_root" />
+					<uiCtrls:WpfFilterCheckBox Grid.Row="7" Grid.Column="1" AttributeName="ad_root" />
 					<TextBox Grid.Row="7" Grid.Column="2" Text="{Binding AutoDefaults, Mode=TwoWay}" />
 
 					<TextBlock Grid.Row="8" Grid.Column="0" Text="{tsd:Loc albl_auto_connection_rule_group}" />
-					<uiCtls:WpfFilterCheckBox Grid.Row="8" Grid.Column="1" AttributeName="ac_root" />
+					<uiCtrls:WpfFilterCheckBox Grid.Row="8" Grid.Column="1" AttributeName="ac_root" />
 					<TextBox Grid.Row="8" Grid.Column="2" Text="{Binding AutoConnection, Mode=TwoWay}" />
 				</Grid>
 			</TabItem>
